Switch to omni framework